# term-sudoku

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.c  main.h  makefile  term-sudoku.1
src/: main.c  main.h  ncurses_render.c  ncurses_render.h  sudoku.c  sudoku.h  util.c  util.h
